Issue #4 - Remove some compiles on warning